--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,14 @@
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight:400;
+  src: local('Montserrat'),
+    url('./assets/fonts/Montserrat-Regular.ttf');
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Montserrat',-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
